# MonitorPilot

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: architecture.mdc  ask-question.mdc  coding.mdc  docs.mdc  general.mdc  testing.mdc  workflow.mdc
.github/workflows/: build.yml
docs/: opensource-reference.md  refactor-monitor-module.md  switching-logic.md
openspec/changes/ddc-extension-and-multi-monitor/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/ddc-extension-and-multi-monitor/specs/ddc-controls/: spec.md
openspec/changes/ddc-extension-and-multi-monitor/specs/multi-monitor/: spec.md
openspec/changes/initial-monitor-pilot-app/: design.md  proposal.md  tasks.md
openspec/changes/ui-polish-and-bugfix/: design.md  proposal.md  tasks.md
public/: theme.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  display_observer.rs  lib.rs  monitor.rs  tray.rs
src-tauri/src/monitor/: desktop.rs  input_map.rs  macos.rs  mod.rs  retry.rs  types.rs  verify.rs
src/__tests__/: app.test.tsx
src/components/: ddc-controls.tsx  feature-tips.tsx  hotkey-config.tsx  monitor-card-skeleton.tsx  monitor-card.tsx
src/components/__tests__/: ddc-controls.test.tsx  monitor-card.test.tsx
src/components/ui/: button.tsx  input.tsx  slider.tsx
src/test/: setup.ts
src/types/: monitor.ts
src/types/__tests__/: monitor.test.ts
tasks/: lessons.md  switch-flow-analysis.md
(+7 files in other folders)
