[package]
name = "monitor-pilot"
version = "0.1.0"
description = "DDC/CI Monitor Input Source Switcher"
authors = ["Larry Gao"]
license = "MIT"
repository = "https://github.com/Larry-Labs/MonitorPilot"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
open = "5.3.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
ddc-hi = "0.4"
